# reel

./: .gitignore  Cargo.toml  LICENSE  Makefile  PRODUCT.md  README.md  TODO.md
crates/reel-core/: Cargo.toml
crates/reel-core/examples/: dump.rs  reproxy.rs  timeline.rs
crates/reel-core/src/: archive.rs  cards.rs  config.rs  cut.rs  dedup.rs  edit.rs  import.rs  ledger.rs  lib.rs  log.rs  media.rs  model.rs  organize.rs  proxy.rs  pull.rs  push.rs  rclone.rs  remove.rs  restore.rs  review.rs  serve.rs  sessions.rs  share.rs  still.rs  store.rs  sync.rs  thumbs.rs  timeline.rs  trips.rs  wipe.rs
crates/reel-core/tests/: engine.rs
packaging/: .SRCINFO  PKGBUILD  README.md  reel.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clip_server.rs  commands.rs  main.rs
tests/: zone.test.mjs
ui/: app.js  index.html  style.css
