[workspace]
resolver = "2"
members = ["crates/reel-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jaeho Cho"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile: small, fast binary (matches a packaged desktop app).
[profile.release]
opt-level = "s"
lto = true
strip = true
