[package]
name = "reel-core"
description = "Engine for reel: footage ingest, sessions, ledger, cut — no GUI deps."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
hex = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
